<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:5"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldando_usuario"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agencia_bancaria"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"/>

    <TextView
        android:id="@+id/tv_numero_ag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_agencia"
        android:layout_marginLeft="6dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"/>

    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_conta"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/tv_numero_ag"
        app:layout_constraintTop_toTopOf="@id/tv_numero_ag"/>

    <TextView
        android:id="@+id/tv_numero_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_conta"
        android:layout_marginLeft="6dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/tv_conta_corrente"
        app:layout_constraintTop_toTopOf="@id/tv_conta_corrente"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_saldo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_monetization_on_foreground"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_saldo_disponivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/txt_saldo_disponivel"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/iv_saldo"
            app:layout_constraintTop_toTopOf="@id/iv_saldo"
            app:layout_constraintBottom_toBottomOf="@id/iv_saldo"/>

        <ImageView
            android:id="@+id/iv_up"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_expand_up_foreground"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="@id/iv_saldo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/iv_saldo" />

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 2.486,75"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
            app:layout_constraintStart_toStartOf="@id/iv_saldo" />

        <TextView
            android:id="@+id/tv_saldo_limite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limite_de_credito"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo"
            app:layout_constraintStart_toStartOf="@id/tv_saldo" />

        <TextView
            android:id="@+id/tv_limite_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
            app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
            android:text="@string/saldo_e_limite"
            android:layout_marginLeft="8dp" />

        <View
            android:id="@+id/v_linha_divisoria"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite" />

        <TextView
            android:id="@+id/tv_ver_estrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extrato_conta"
            android:textColor="@color/redPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_linha_divisoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_pagar_fatura"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pagar_fatura_foreground"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar_fatura"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pagar_fatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagar_fatura_cartao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_pagar_fatura" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferencia"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_transferencia"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_transferencia_foreground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_transferencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_transferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tranferencia"
                app:layout_constraintTop_toBottomOf="@id/iv_transferencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarga_celular"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_transferencia"
        app:layout_constraintLeft_toLeftOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga_celular"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_recarga_foreground"
                app:layout_constraintBottom_toBottomOf="@id/tv_recarga_celular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_recarga_celular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recarga_celular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_recarga_celular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_qr_code"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_pagar" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_qr_code"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_qr_code_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_qr_code" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pix"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_transferencia"
        app:layout_constraintStart_toEndOf="@id/mcv_qr_code" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_pix"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_pix_foreground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_pix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_pix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pix"
                app:layout_constraintTop_toBottomOf="@id/iv_pix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_poupar"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_recarga_celular"
        app:layout_constraintStart_toEndOf="@id/mcv_pix"
        app:layout_constraintLeft_toLeftOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_poupar"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_poupar_dinheiro_foreground"
                app:layout_constraintBottom_toBottomOf="@id/tv_poupar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_poupar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poupar_dinheiro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poupar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iv_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/mcv_qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_numero_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cartao_final"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/iv_numero_cartao"
        app:layout_constraintTop_toTopOf="@id/iv_numero_cartao"
        app:layout_constraintLeft_toLeftOf="@id/iv_numero_cartao"
        app:layout_constraintBottom_toBottomOf="@id/iv_numero_cartao"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ultimos_4_numeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0033"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/tv_numero_cartao"
        app:layout_constraintStart_toEndOf="@id/tv_numero_cartao" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_expand_more_foreground"
        app:barrierMargin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_numero_cartao"
        app:layout_constraintTop_toTopOf="@id/iv_numero_cartao"
        app:layout_constraintEnd_toEndOf="@id/iv_numero_cartao"/>

</androidx.constraintlayout.widget.ConstraintLayout>